--- a/Slides.Rmd
+++ b/Slides.Rmd
@@ -26,11 +26,10 @@ library(tidyverse)
 library(ggthemes)
 ```
 
-Questions we are answering
+Questions we are answering, Background Info
 ---
 
 ## The Data
-Loaded in a dataset 
 
 ```{r load-data, warning = FALSE, message = FALSE, echo =FALSE}
 library(tidyverse)
@@ -38,20 +37,23 @@ library(gt)
 insurance<- read_csv("insurance.csv")
 ```
 
-
 There's 7 columns with 1338 observations
 
 Categorical variables: Sex, Smoker, Region
 Continuous variables: BMI, Age, Children
 Response: Charges
 
-Each row and observation is 
+Each row and observation is one insured individual.
 
 ```{r display-data, warning = FALSE, message = FALSE}
-gt(insurance) 
+gt(insurance)
 ```
 ---
 ## Correlation Plot
+
+
+---
+## Changing BMI to Categorical
 
 ---
 
@@ -65,9 +67,22 @@ insurance %>%
 ```
 
 ---
-## Models
+## More EDA
+
+
+---
+## Models Using Step AIC
+
+
+
+---
+## Incorporating Interaction Terms
 
 
 ---
 
-## Residuals
+## Residual Analysis
+
+
+---
+## Conclusion
